--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Document</title>
-    <style>
-      h1 {
-        text-align: center;
-      }
-      table,
-      tr,
-      td,
-      th {
-        border: 1px solid black;
-        border-collapse: collapse;
-        width: 500px;
-        text-align: center;
-      }
-      table {
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>HTML tasks</h1>
-    <table>
-      <tr>
-        <th>Task Name</th>
-        <th>Task Link</th>
-      </tr>
-      <tr>
-        <td>Task 1</td>
-        <td><a href="task1.html">task 1 link</a></td>
-      </tr>
-      <tr>
-        <td>Task 2</td>
-        <td><a href="task2.html">task 2 link</a></td>
-      </tr>
-      <tr>
-        <td>Task 3</td>
-        <td><a href="task3.html">task 3 link</a></td>
-      </tr>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+</head>
+<body>
+    <h1><center> All tasks links are provided in the table</center></h1>
+    <table border="5" align="center">
+        <tr>
+            <td>Html Task 1</td>
+            <td><a href="Task1.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Html Task 2</td>
+            <td><a href="Task2.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Html Task 3</td>
+            <td><a href="Task3.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Html Task 4</td>
+            <td><a href="Task4.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Html Task 5</td>
+            <td><a href="Task5.html"target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Css Task 1</td>
+            <td><a href="CSS_TASK1.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Css Task 2</td>
+            <td><a href="CSS_TASK2.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Css Task 3</td>
+            <td><a href="CSS_TASK3.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Css Task 4</td>
+            <td><a href="CSS_TASK4.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Css Task 5</td>
+            <td><a href="CSS_TASK5.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Css Task 6</td>
+            <td><a href="CSS_TASK6.html" target="_blank">Click here</a></td>
+        </tr>
+        <tr>
+            <td>Css Task 7</td>
+            <td><a href="CSS_TASK7.html" target="_blank">Click here</a></td>
+        </tr>
     </table>
-  </body>
+</body>
 </html>
