--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1><center> All tasks links are provided in the table</center></h1>
+    <h1><center> All Tasks links are provided in the table</center></h1>
     <table border="5" align="center">
         <tr>
             <td>Html Task 1</td>
@@ -30,31 +30,31 @@
         </tr>
         <tr>
             <td>Css Task 1</td>
-            <td><a href="CSS_TASK1.html" target="_blank">Click here</a></td>
+            <td><a href="CSS_Task1.html" target="_blank">Click here</a></td>
         </tr>
         <tr>
             <td>Css Task 2</td>
-            <td><a href="CSS_TASK2.html" target="_blank">Click here</a></td>
+            <td><a href="CSS_Task2.html" target="_blank">Click here</a></td>
         </tr>
         <tr>
             <td>Css Task 3</td>
-            <td><a href="CSS_TASK3.html" target="_blank">Click here</a></td>
+            <td><a href="CSS_Task3.html" target="_blank">Click here</a></td>
         </tr>
         <tr>
             <td>Css Task 4</td>
-            <td><a href="CSS_TASK4.html" target="_blank">Click here</a></td>
+            <td><a href="CSS_Task4.html" target="_blank">Click here</a></td>
         </tr>
         <tr>
             <td>Css Task 5</td>
-            <td><a href="CSS_TASK5.html" target="_blank">Click here</a></td>
+            <td><a href="CSS_Task5.html" target="_blank">Click here</a></td>
         </tr>
         <tr>
             <td>Css Task 6</td>
-            <td><a href="CSS_TASK6.html" target="_blank">Click here</a></td>
+            <td><a href="CSS_Task6.html" target="_blank">Click here</a></td>
         </tr>
         <tr>
             <td>Css Task 7</td>
-            <td><a href="CSS_TASK7.html" target="_blank">Click here</a></td>
+            <td><a href="CSS_Task7.html" target="_blank">Click here</a></td>
         </tr>
     </table>
 </body>
